plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0-M2'
	id 'io.spring.dependency-management' version '1.1.7'
    id("io.swagger.core.v3.swagger-gradle-plugin") version "2.2.41"
	id 'org.graalvm.buildtools.native' version '0.11.1'
}

group = 'com.fatec'
version = '0.1'
description = 'Projeto para gerenciamento de viagens'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.postgresql:postgresql:42.7.10'
    implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
	runtimeOnly 'com.mysql:mysql-connector-j:9.6.0'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
